2002-01-14  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_run.c (bk_run_getpref): Proper argument checking.
	(bk_run_setpref): Proper argument checking.

	* lib/b_ioh.c (ioh_runhandler): Setpre on correct fd.

2002-01-11  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (bk_iohh_bnbio_tell): use int64_t, not BSD quad_t

	* include/libbk_internal.h (struct bk_polling_io): use int64_t

	* lib/b_bnbio.c (bk_iohh_bnbio_tell): return int64_t

	* include/libbk_include.h (struct ether_addr): defined if none of the
	possible include files are present

	* include/libbk_oscompat.h: use BK_MINGW
	(HAVE_INET6): #ifdef AF_INET6 and HAVE_inet_pton

	* lib/b_getbyfoo.c (bk_gethostbyfoo, copy_hostent): #ifdef HAVE_INET6

	* lib/b_netaddr.c (bk_netaddr_addrdup, update_bna_pretty): HAVE_INET6
	(bk_netaddr_af2nat, bk_netaddr_nat2af): AF_INET6

	* test/test_getbyfoo.c (host_callback): #ifdef HAVE_INET6

	* lib/b_signal.c (bk_signal_set, bk_signal_set_alarm, bk_signal_reset):
	(bk_signal_reset_alarm): use sigprocmask, not BSD sigblock/sigsetmask

2002-01-09  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_ENV_GWD): use BK_OR()
	(BK_VERSION_CMP): use BK_OR
	(BK_TV_CMP): use BK_OR

	* test/test_url.c (PRINT_ELEMENT): test bk_url_unescape

	* lib/b_url.c (bk_url_unescape): new function to expand % escapes
	(bk_url_parse): separate strict parse flag for function from flags
	in structure
	(count_colons): eliminated this obsolete static function
	
	* lib/b_general.c (bk_general_proctitle_init): don't confuse flag
	for function with flag in structure; always turn off proctitle
	stuff when running with Insure++

	* lib/b_debug.c (bk_debug_destroy): free bk_debug struct itself

	* include/libbk.h (BK_OR): wrap GNU extension to ?: omitting middle arg

	* include/libbk_i18n.h: INSIGHT->INSURE, include <locale.h>

	* include/libbk_include.h (u_int#_t): work around esoteric gcc'isms
	that Insure++ doesn't grok at all

2002-01-08  James Tanis  <jtt@winwood.sysdetect.com>
