@@ -1,3 +1,8 @@
+2002-01-14  James Tanis  <jtt@winwood.sysdetect.com>
+
+	* lib/b_pollio.c (bk_polling_io_do_poll): Only set the don't block
+	if there's data already sitting in queue.
+
 2002-01-14  James Tanis  <jtt@saint.sysdetect.com>
 
 	* lib/b_run.c (bk_run_getpref): Proper argument checking.
